// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Checkbox Snapshots should match snapshot when checked 1`] = `
<div
  class=""
>
  <div
    class="flex items-start"
  >
    <input
      aria-invalid="false"
      checked=""
      class="w-5 h-5 border-2 rounded transition-colors focus:outline-none focus:ring-2 focus:ring-offset-2 border-neutral-300 focus:ring-primary-500 text-primary-600 bg-white cursor-pointer "
      id="_r_1b_"
      readonly=""
      type="checkbox"
    />
    <label
      class="ml-2 block text-base text-neutral-700 cursor-pointer"
      for="_r_1b_"
    >
      I agree
    </label>
  </div>
</div>
`;

exports[`Checkbox Snapshots should match snapshot when disabled 1`] = `
<div
  class=""
>
  <div
    class="flex items-start"
  >
    <input
      aria-invalid="false"
      class="w-5 h-5 border-2 rounded transition-colors focus:outline-none focus:ring-2 focus:ring-offset-2 border-neutral-300 focus:ring-primary-500 text-primary-600 bg-neutral-100 text-neutral-400 cursor-not-allowed "
      disabled=""
      id="_r_1c_"
      type="checkbox"
    />
    <label
      class="ml-2 block text-base text-neutral-700 cursor-not-allowed opacity-60"
      for="_r_1c_"
    >
      Disabled
    </label>
  </div>
</div>
`;

exports[`Checkbox Snapshots should match snapshot when required 1`] = `
<div
  class=""
>
  <div
    class="flex items-start"
  >
    <input
      aria-invalid="false"
      class="w-5 h-5 border-2 rounded transition-colors focus:outline-none focus:ring-2 focus:ring-offset-2 border-neutral-300 focus:ring-primary-500 text-primary-600 bg-white cursor-pointer "
      id="_r_1f_"
      required=""
      type="checkbox"
    />
    <label
      class="ml-2 block text-base text-neutral-700 cursor-pointer"
      for="_r_1f_"
    >
      Required
      <span
        aria-label="required"
        class="text-destructive-600 ml-1"
      >
        *
      </span>
    </label>
  </div>
</div>
`;

exports[`Checkbox Snapshots should match snapshot with all sizes 1`] = `
<div>
  <div>
    <div
      class=""
    >
      <div
        class="flex items-start"
      >
        <input
          aria-invalid="false"
          class="w-4 h-4 border-2 rounded transition-colors focus:outline-none focus:ring-2 focus:ring-offset-2 border-neutral-300 focus:ring-primary-500 text-primary-600 bg-white cursor-pointer "
          id="_r_18_"
          type="checkbox"
        />
        <label
          class="ml-2 block text-sm text-neutral-700 cursor-pointer"
          for="_r_18_"
        >
          Small
        </label>
      </div>
    </div>
    <div
      class=""
    >
      <div
        class="flex items-start"
      >
        <input
          aria-invalid="false"
          class="w-5 h-5 border-2 rounded transition-colors focus:outline-none focus:ring-2 focus:ring-offset-2 border-neutral-300 focus:ring-primary-500 text-primary-600 bg-white cursor-pointer "
          id="_r_19_"
          type="checkbox"
        />
        <label
          class="ml-2 block text-base text-neutral-700 cursor-pointer"
          for="_r_19_"
        >
          Medium
        </label>
      </div>
    </div>
    <div
      class=""
    >
      <div
        class="flex items-start"
      >
        <input
          aria-invalid="false"
          class="w-6 h-6 border-2 rounded transition-colors focus:outline-none focus:ring-2 focus:ring-offset-2 border-neutral-300 focus:ring-primary-500 text-primary-600 bg-white cursor-pointer "
          id="_r_1a_"
          type="checkbox"
        />
        <label
          class="ml-2 block text-lg text-neutral-700 cursor-pointer"
          for="_r_1a_"
        >
          Large
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`Checkbox Snapshots should match snapshot with default props 1`] = `
<div
  class=""
>
  <div
    class="flex items-start"
  >
    <input
      aria-invalid="false"
      class="w-5 h-5 border-2 rounded transition-colors focus:outline-none focus:ring-2 focus:ring-offset-2 border-neutral-300 focus:ring-primary-500 text-primary-600 bg-white cursor-pointer "
      id="_r_17_"
      type="checkbox"
    />
    <label
      class="ml-2 block text-base text-neutral-700 cursor-pointer"
      for="_r_17_"
    >
      I agree to terms
    </label>
  </div>
</div>
`;

exports[`Checkbox Snapshots should match snapshot with error 1`] = `
<div
  class=""
>
  <div
    class="flex items-start"
  >
    <input
      aria-describedby="_r_1d_-error"
      aria-invalid="true"
      class="w-5 h-5 border-2 rounded transition-colors focus:outline-none focus:ring-2 focus:ring-offset-2 border-destructive-500 focus:ring-destructive-500 text-destructive-600 bg-white cursor-pointer "
      id="_r_1d_"
      type="checkbox"
    />
    <label
      class="ml-2 block text-base text-neutral-700 cursor-pointer"
      for="_r_1d_"
    >
      Accept terms
    </label>
  </div>
  <p
    class="mt-1.5 text-sm text-destructive-600"
    id="_r_1d_-error"
    role="alert"
  >
    You must accept the terms
  </p>
</div>
`;

exports[`Checkbox Snapshots should match snapshot with help text 1`] = `
<div
  class=""
>
  <div
    class="flex items-start"
  >
    <input
      aria-describedby="_r_1e_-help"
      aria-invalid="false"
      class="w-5 h-5 border-2 rounded transition-colors focus:outline-none focus:ring-2 focus:ring-offset-2 border-neutral-300 focus:ring-primary-500 text-primary-600 bg-white cursor-pointer "
      id="_r_1e_"
      type="checkbox"
    />
    <label
      class="ml-2 block text-base text-neutral-700 cursor-pointer"
      for="_r_1e_"
    >
      Subscribe
    </label>
  </div>
  <p
    class="mt-1.5 text-sm text-neutral-600"
    id="_r_1e_-help"
  >
    You can unsubscribe at any time
  </p>
</div>
`;
